samples/_failures_safe/1761188470_79ee31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2336326d.c: In function ‘main’:
./samples/SAFE/__tmp_2336326d.c:147:16: error: missing terminating " character
  147 |         printf("Failed to
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_2336326d.c:147:9: error: expected expression at end of input
  147 |         printf("Failed to
      |         ^~~~~~
./samples/SAFE/__tmp_2336326d.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2336326d.c:147:9: error: expected declaration or statement at end of input
